# discord-emoji-selection

./: .gitignore  README.md  emoji_votes.csv  pyproject.toml  watch.nix.sh
csv-reparse/: __main__.py
